# backend-api-jwt

./: Cargo.toml
migrations/: 20260117083118_create_users_table.sql
src/: main.rs
src/config/: database.rs
src/models/: user.rs
src/schemas/: mod.rs  register_schema.rs
src/utils/: jwt.rs  response.rs
