[package]
name = "backend-api-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.17.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","mysql"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = "0.6.8"
validator = "0.20.0"
